--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React FTW!</title>
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico" rel="stylesheet">
+  <link href ="main.css" type="text/css" rel="stylesheet">
+  <title>Luk & Nan Shopping bag!</title>
 </head>
 <body>
   <div id="app"></div>
