--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Sumana" rel="stylesheet">
   <link href ="main.css" type="text/css" rel="stylesheet">
   <title>Luk & Nan Shopping bag!</title>
 </head>
